--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,8 +11,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Welcome To</h1>
-    <h1>Jhankar Mahbub World!</h1>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Jhankar Mahbub</span> World!</h1>
+            <h3>Build Climber And Train Stopper</h3>
+            <p>you might saw me jumping, climbing building And stop trains.But nobody pays me a dime for that work.
+                That's
+                why I am learning and mastering web development. I will not stop until I become the web development
+                Hero.
+            </p>
+            <a class="link-button" target="_blank" href="https://github.com/hafizurrahmanrazib">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="./images/jhankar.png" alt="Jhankar Mahbub Image Here">
+        </div>
+    </section>
 </body>
+
 </html>
