--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
             <img src="./images/jhankar.png" alt="Jhankar Mahbub Image Here">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="./images/jhankar2.png" alt="Jhankar Mahbub Image Two Here">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web Developer</h2>
+            <p>I already learned the basic html and css. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advance topics.</p>
+            <a class="link-button" target="_blank" href="https://github.com/hafizurrahmanrazib">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 
 </html>
