--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Jhankar Mahbub</span> World!</h1>
@@ -29,7 +29,7 @@
             <img src="./images/jhankar.png" alt="Jhankar Mahbub Image Here">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="./images/jhankar2.png" alt="Jhankar Mahbub Image Two Here">
         </div>
@@ -41,6 +41,31 @@
             <a class="link-button" target="_blank" href="https://github.com/hafizurrahmanrazib">DOWNLOAD RESUME</a>
         </div>
     </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack-developer" class="experience-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-color">2024-present | Pro Level Web Developer</h3>
+                <p>I'm the master of html,css and javascript. I know everything needed to make a website
+                    fuction,efficient.
+                    I didn't stop with the web. I went beyond with the most popular javascript framework call Vue Js. I
+                    even
+                    know the deployment, server and security. I Will give you 100% web solution.</p>
+            </div>
+            <div id="baby-web-developer" class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-color">2022-2024 | Programming Hero Learner</h3>
+                <p> They didn't offer me a job. But I made myself as a remote web developer. I made their website and
+                    showed
+                    it to them. They liked it and uploaded the content. It was fun working with at programming hero
+                    Community.</p>
+            </div>
+        </div>
+    </section>
 </body>
+<footer>
+    <p>&copy; Peter Parker 2024, a Programming Hero Initiative.</p>
+</footer>
 
 </html>
